# SigmaEdu-backend

./: .env.example  .gitignore  AGENTS.md  README.md  banco_local.db  db.py  models.py  pyproject.toml  requirements.txt  test_geografia.py  test_mock.py  user_service.py
app/: config.py  main.py
app/core/: dependencies.py  result.py  security.py
app/data/: enem_banco_questoes.json
app/data/banco_questoes/: enem_banco_questoes.json
app/database/: session.py
app/models/: user.py
app/repositories/: user_repository.py
app/routers/: auth.py  ava_acompanhamento.py  ava_format_generator.py  users.py
app/schemas/: user.py
app/services/: acompanhamento_service.py  auth_service.py  format_generator_service.py
