[project]
name = "sigmaedu-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.138.1",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
